--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build
         run: |
           cd reconfig
-          yarn build
+          yarn install && yarn build
 
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.6.1
